tests/sksl/errors/InvalidMeshVertexMainReturn.stage
### Compilation failed:

error: 9: 'main' must return 'Varyings'.
NotVaryings main(const Attributes attr) {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 10: unknown identifier 'attr'
    return NotVaryings(attr.position);
                       ^^^^
2 errors
